1. GUI - Succefully add tabs(TabControl in Avalonia) and a drop down list(ComboBox), and implant former window components into the first tab page. 2. GUI/Design - To apply Avalonia UI, tried many refactorings including renaming files and moving paths - but eventually failed. 3. GUI/Toolkit - Practice ReactieUI, also supported by Avalonia, and made some progress in routing example to apply MVVM pattern. 4. Misc - There're many unfinished codes as consequences to find/resolve answers, so don't judge all of the committed codes are legit.(see also '2.' above; especially about 'DemoApp') 5. README - Further considerations and partial histories are added.
[Comment]
Too much effort to resolve MVVM pattern using Avalonia, and ReactiveUI has been joined additionally.
Still 'DemoApp' itself is messy, but at least newly attached 'ReactiveUiDemo' can show you how ReactiveUI in Avalonia works, especially about routing example.
Try some dealing with namespaces or to find out some direct way to bind views and view models.
And additionally, (I decided to) write down plenty of words in here, comment section, with context and (to) try to keep it simple about commit message above.

[GitHub]
Reference Issues: #7

--- a/ReactiveUiDemo/ReactiveUiDemo.csproj
+++ b/ReactiveUiDemo/ReactiveUiDemo.csproj
@@ -9,6 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Folder Include="Models\" />
+        <AvaloniaResource Include="Assets\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectCapability Include="Avalonia" />
         <TrimmerRootAssembly Include="Avalonia.Themes.Fluent" />
     </ItemGroup>
@@ -19,14 +24,6 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.21" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.21" />
-        <PackageReference Include="ScottPlot.Avalonia" Version="4.1.64" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Compile Update="Views\MainWindow.axaml.cs">
-        <DependentUpon>MainWindow.axaml</DependentUpon>
-        <SubType>Code</SubType>
-      </Compile>
     </ItemGroup>
 </Project>
